Bug 1687067 - Build OverscrollHandoffChain by walking up hit testing tree instead of APZC tree. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D103601